# atsphinx.github.io

./: .editorconfig  Makefile  Pipfile  README.rst  Taskfile.yaml  aqua.yaml  lefthook.yml  make.bat  pyproject.toml
.github/workflows/: check.yaml  deploy.yml  main.yml
contents/: Taskfile.yaml  conf.py  contributing.rst  index.rst  packages.rst  versioning.rst
contents/_static/css/: custom.css  page-index.css
contents/_static/js/: page-index.js
locales/ja/LC_MESSAGES/: contributing.po  index.po  packages.po
tools/: sync_packages.py  write-project-snippets.py
